Updated install-plugin.sh so it can run with su command; Added dev_mode to install-plugin.sh to bypass GPE reset;Added options to specify data_root and graph name to make benchmark easier;

--- a/plugin/Makefile
+++ b/plugin/Makefile
@@ -80,4 +80,4 @@ gen-xclbin-pkg:
 
 ############################## Cleaning Rules ##############################
 clean:
-	-$(RMDIR) ${XFLIB_DIR}/plugin/tigergraph/QueryUdf/*.so 
+	-$(RMDIR) ${libGRAPHL3WRAPPER}
