--- a/cosinesim/Makefile
+++ b/cosinesim/Makefile
@@ -229,10 +229,11 @@ $(CPP_BUILD_DIR)/cosinesim_dyn_test: $(CPP_BUILD_DIR)/cosinesim_test.o $(CPP_BUI
 	$(LINK.cc) -o $@ $^ -fPIC -w -L $(CPP_BUILD_DIR) -l$(LOADER_SHORT_NAME) -ldl $(LIB_DEPS)
 
 run-test: cppTest
-	LD_LIBRARY_PATH=$(LD_LIBRARAY_PATH):$(PWD)/$(CPP_BUILD_DIR) $(CPP_BUILD_DIR)/cosinesim_test
+	LD_LIBRARY_PATH=$(PWD)/$(CPP_BUILD_DIR):$(LD_LIBRARAY_PATH) $(CPP_BUILD_DIR)/cosinesim_test
 
 run-dyn-test: cppTest
-	LD_LIBRARY_PATH=$(LD_LIBRARAY_PATH):$(PWD)/$(CPP_BUILD_DIR) $(CPP_BUILD_DIR)/cosinesim_dyn_test
+	LD_PRELOAD=$(PWD)/$(CPP_BUILD_DIR)/$(LIB_NAME) LD_LIBRARY_PATH=$(PWD)/$(CPP_BUILD_DIR):$(LD_LIBRARAY_PATH) \
+	    $(CPP_BUILD_DIR)/cosinesim_dyn_test
 
 #LDFLAGS_fakeudf = -fPIC -w -L /scratch/tigergraph/tigergraph/app/3.1.0/dev/gdk/gsql/src/QueryUdf -lgraphL3wrapper -ldl
 LDFLAGS_fakeudf = -fPIC -w -L $(CPP_BUILD_DIR) -l$(LIB_SHORT_NAME)
