Added makefile for recom engine

--- a/cosinesim/Makefile
+++ b/cosinesim/Makefile
@@ -386,6 +386,8 @@ else ifeq ($(OSDIST),CentOS)
     DIST_TARGET = RPM
 endif
 
+.PHONY: dist
+
 dist: stage
 	@cd package; \
 	if [ "$(DIST_TARGET)" == "" ]; then \
