Added help target to Makefile. Removed overlay install in xrt/xrm/platform install script

--- a/cosinesim/Makefile
+++ b/cosinesim/Makefile
@@ -427,3 +427,8 @@ clean:
 	
 clean-xclbin:
 	rm -f $(XCLBIN_FILE)
+
+help:
+	@echo "Valid make targets:"
+	@echo "dist    : Generate cosinesim product package (RPM or DEB) for the current OS and architecture"
+	@echo "run-test: Run standalone test with statically linked executable"
